# npcink-device-inventory

./: .gitignore  AiTips.md  README.en.md  README.md  README.txt  composer.json  demo.html  demo.json  device-manage.php  docker-compose.test.yml  index.php  magick-device-manage.php  npcink-device-inventory.php  npcink-device-manage.php  package.json  phpcs.xml.dist  phpstan.neon.dist  uninstall.php
InsPackage/: README.md  electron-builder.yml  index.html  package.json  tsconfig.json  vite.config.js
admin/: class-dema-admin.php  class-npcink-device-inventory-admin.php  class-npcink-device-manage-admin.php
admin-vite/: package.json  vite.config.ts
docs/: README.md  admin-latest-and-macos-uploader-history-2026-07-06.md  admin-ui-reconciliation-history.md  analysis-department-issue-state-hardening-2026-07-09.md  analysis-remediation-development-notes-2026-07-10.md  asset-data-model.md  asset-list-regexp-incident-2026-07-06.md  backup-restore-and-release-packaging-history-2026-07-06.md  client-token-package-preset-history.md  data-tools-and-asset-policy-history-2026-07-03.md  desktop-updater-release-history-2026-07-06.md  desktop-uploader-win11-stabilization-summary-2026-07-03.md  device-data-v2-contract.md  device-inventory-product-and-release-history-2026-07-04.md  ele-rust-phase1.md  github-release.md  github-transition-summary.md  identity-compatibility-contract.md  identity-contract.md  modernization-history.md  pilot-validation-2026-07-15.md  plugin-check-db-cache-escaping-follow-up-2026-07-03.md  (+16 more)
ele-rs/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
ele-rs/scripts/: windows-smoke-test.bat  windows-smoke-test.ps1
ele-rs/src/: lib.rs  main.rs  main.ts  style.css  upload.rs
ele-rs/src-tauri/: Cargo.toml  agent-preset.example.json  build.rs  tauri.conf.json
ele-rs/src-tauri/capabilities/: default.json
ele-rs/src-tauri/icons/: icon.icns
ele-rs/src-tauri/src/: config.rs  lib.rs  main.rs
ele-rs/src/collector/: mod.rs  platform.rs
(+631 files in other folders)
