[package]
name = "npcink-device-agent"
version = "0.1.4"
edition = "2021"
description = "Rust hardware collector and uploader for Npcink Device Inventory"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hmac = "0.12"
local-ip-address = "0.6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.30"
