[package]
name = "npcink-device-agent-desktop"
version = "0.1.5"
description = "Npcink Device Agent desktop shell"
authors = ["Npcink"]
edition = "2021"

[lib]
name = "npcink_device_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1.0"
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "5.0"
npcink-device-agent = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
